# ledgerpilot

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  demo.py  pyproject.toml  webui.py
docs/: BLOG.md  DEMO_SCRIPT.md  DEVPOST.md  NEXT_STEPS.md  counterfactual_proof.txt  ecs_proof.txt  live_run.txt  real_write_proof.txt  vision_ingest_proof.txt
docs/evidence/: README.md
eval/: __init__.py  corpus.py  harness.py  live_eval.py  live_tasks.py  scripted_planner.py  stats.py
ledgerpilot/: __init__.py  chart_of_accounts.py  config.py  gate.py  ingest.py  mcp_server.py  models.py  odoo_client.py  planner.py  tokens.py  writeback.py
scripts/: counterfactual.py  deploy_ecs.py  ecs_bootstrap.sh  ecs_proof.sh  ingest_demo.py  live_close.py  mcp_demo.py  real_odoo_write.py  setup_tls.sh
tests/: test_config_security.py  test_gate.py  test_gate_holes.py  test_live_eval.py  test_mcp_server.py  test_odoo_client.py  test_pipeline.py  test_planner.py  test_writeback_reconciliation.py
web/: index.html
